project(algo.cpp.problems.leetcode)

add_subdirectory(ds)
add_subdirectory(array)
add_subdirectory(hashtable)
add_subdirectory(list)
add_subdirectory(tree)
add_subdirectory(pq)
add_subdirectory(graph)
add_subdirectory(stack)
add_subdirectory(strings)
add_subdirectory(misc)
add_subdirectory(maths)
add_subdirectory(set)