project(algo.cpp.problems.leetcode.array)

add_subdirectory(floodfill_733)
add_subdirectory(island_perimeter_463)
add_subdirectory(monotonic_896)
add_subdirectory(game_of_life_289)
add_subdirectory(min_domino_rotations_for_equal_row_1007)
add_subdirectory(next_permutation_31)
add_subdirectory(search_in_rotated_array_81)
add_subdirectory(min_size_subarray_sum_209)
add_subdirectory(min_time_visit_all_paths_1266)
add_subdirectory(transpose_matrix_867)