project(algo.cpp.tests.cpp.problems.leetcode.array)

add_subdirectory(floodfill_733)
add_subdirectory(island_perimeter_463)
add_subdirectory(monotonic_896)
add_subdirectory(game_of_life_289)
add_subdirectory(min_domino_rotations_for_equal_row_1007)
add_subdirectory(next_permutation_896)
add_subdirectory(search_in_rotated_array_81)
