project(algo.cpp.tests.cpp.problems.leetcode.array)

add_subdirectory(floodfill_733)
add_subdirectory(island_perimeter_463)
add_subdirectory(monotonic_896)
add_subdirectory(game_of_life_289)
add_subdirectory(min_domino_rotations_for_equal_row_1007)
add_subdirectory(next_permutation_31)
add_subdirectory(search_in_rotated_array_81)
add_subdirectory(min_size_subarray_sum_209)
add_subdirectory(min_time_visit_all_paths_1266)
add_subdirectory(transpose_matrix_867)
add_subdirectory(elm_appear_more_than_quarter_sorted_array_1287)
add_subdirectory(max_prod_2_elem_1464)
add_subdirectory(spl_pos_in_bin_matrix_1582)
add_subdirectory(diff_btwn_1s_0s_2482)
add_subdirectory(buy_2_choc_2706)
add_subdirectory(house_robber_198)
add_subdirectory(set_mismatch_645)
add_subdirectory(out_of_bndry_paths_576)