project(algo.cpp.problems.interview.medium.array)

add_subdirectory(three_sum)
add_subdirectory(three_sum_closest_16)
add_subdirectory(four_sum)
add_subdirectory(next_perm_31)
add_subdirectory(search_in_rotated_array_33)
add_subdirectory(find_first_last_position_in_sorted_array_34)
add_subdirectory(random_pick_with_weight_528)
add_subdirectory(find_peak_element_162)
add_subdirectory(diag_traverse_498)