project(algo.cpp.problems.interview.medium.array)

add_subdirectory(three_sum)
add_subdirectory(three_sum_closest_16)
add_subdirectory(four_sum)
add_subdirectory(next_perm_31)
add_subdirectory(search_in_rotated_array_33)
add_subdirectory(find_first_last_position_in_sorted_array_34)
add_subdirectory(random_pick_with_weight_528)
add_subdirectory(find_peak_element_162)
add_subdirectory(diag_traverse_498)
add_subdirectory(merge_intervals_56)
add_subdirectory(sub_arr_sum_eq_k_560)
add_subdirectory(max_consecutive_ones_1004)
add_subdirectory(k_closest_pts_to_origin_973)
add_subdirectory(number_of_islandes_200)
add_subdirectory(rotate_imge_48)
add_subdirectory(contiguous_array_525)
add_subdirectory(dot_product_2_sparse_vectors_1570)
add_subdirectory(continuous_subarray_sum_523)